--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,25 +1,19 @@
 <div id="post-<%= post.id %>" class="panel panel-default">
   <div class="panel-heading"><%= post.user.display_name %></div>
   <div class="panel-body">
+    <span id="post-thumbsup-<%= post.id %>" class="label label-success"><%= post.likes.count %> 👍</span>
+
     <%= post.content %>
 
     <div class="text-right">
 
-      <% if post.liked_users.any? %>
-        <%= post.liked_users.map{ |u| u.display_name }.join(",") %> 点了赞
-      <% end %>
+    <span id="post-like-<%= post.id %>">
+      <%= render :partial => "like", :locals => { :post => post} %>
+    </span>
 
-      <% if current_user # 有登入才可以按讚 %>
-        <% if post.find_like(current_user) %>
-          <%= link_to "-1", unlike_post_path(post), :method => :post, :class => "btn btn-primary" %>
-        <% else %>
-          <%= link_to "+1", like_post_path(post), :method => :post, :class => "btn btn-primary" %>
-        <% end %>
-      <% end %>
-
-     <% if current_user && post.user == current_user %>
-         <%= link_to "Delete", post_path(post), :method => :delete, :remote => true, :class => "btn btn-danger" %>
-     <% end %>
+    <% if current_user && post.user == current_user %>
+      <%= link_to "Delete", post_path(post), :method => :delete, :remote => true, :class => "btn btn-danger" %>
+    <% end %>
 
    </div>
 
