--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -36,7 +36,7 @@
     }
   })
 
-  $(".toggle-flag").on('change', function(){
+  $("#post-list").on('change', ".toggle-flag", function(){
     var url = $(this).data("url");
 
     $.ajax({
