--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -17,7 +17,7 @@
     </span>
 
     <% if current_user && post.user == current_user %>
-      <%= link_to "Delete", post_path(post), :method => :delete, :remote => true, :class => "btn btn-danger" %>
+      <%= link_to "Delete", post_path(post), :class => "delete-post btn btn-danger" %>
     <% end %>
 
     </div>
