--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,12 +17,12 @@
 
 <script>
 // 这会绑 click 事件到所有有 `.delete-post` class 的元素上，也就是所有的删除按钮
-$(".delete-post").click(function(evt){
+$("#post-list").on('click', ".delete-post", function(evt){
   // `evt` 是浏览器的事件物件，evt.preventDefault(); 会终止这个元素的默认行为：
   // 超连结 a 的默认行为是跳到下一页，如果没有这行的话，送出 ajax 后会跳去 show page
   evt.preventDefault();
   // this 是个特别的变量，代表触发事件的元素。使用 attr 可以读取元素的属性，这里要拿到超连结的网址
-  var url = $(this).attr("href");
+  var that = this;
 
   // 送出 Ajax
   $.ajax({
@@ -30,7 +30,7 @@ $(".delete-post").click(function(evt){
     method: 'DELETE',
     dataType: 'json', // 要求服务器回传 json
     success: function(data){   // data 就是服务器回传的 JSON 资料
-      $("#post-" + data["id"]).remove();
+      $(that).closest(".panel").remove();
     }
 
   })
@@ -55,5 +55,24 @@ $(window).scroll(function(){
     }
   }
 })
+
+$("#post-list").on('change', ".toggle-flag", function(){
+  var url = $(this).data("url");
+  var that = this;
+
+  $.ajax({
+    url: url,
+    method: "POST",
+    dataType: "json",
+    success: function(data){
+      if ( data["flag_at"] ) {
+        $(that).closest("label").find("span").html(data["flag_at"])
+      } else {
+        $(that).closest("label").find("span").html("")
+      }
+    }
+  });
+});
+
 
 </script>
