--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -75,4 +75,28 @@ $("#post-list").on('change', ".toggle-flag", function(){
 });
 
 
+$("#post-list").on('change', ".select_category", function(){
+ var url = $(this).data("url");
+var that = this;
+ $.ajax({
+   url: url,
+   method: "PATCH",
+   dataType: "json",
+   data: {
+     post: {
+       category_id: $(this).val()
+     }
+   },
+   beforeSend: function(){
+      $(that).after( $(' <img src="/images/ajax-loader.gif" id="ajax-loading"> ') );
+   },
+   complete: function(){
+      $("#ajax-loading").remove();
+   }
+
+ });
+});
+
+$(".raty").raty( { path: '/images/' } );
+
 </script>
